--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "animate.css": "^4.1.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
