--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "animate.css": "^4.1.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.0",
     "swiper": "^5.4.5",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
@@ -23,6 +25,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-component": "^1.1.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
